adding logo and new button animations

--- a/src/stylesheets/base/base.scss
+++ b/src/stylesheets/base/base.scss
@@ -1,4 +1,5 @@
 body{
     color: white;
-    background: linear-gradient(to left, #232526, #414345, #414345, #232526);
+    background: black;
+    // background: linear-gradient(to left, #232526, #414345, #414345, #232526);
 }
