--- a/src/stylesheets/components/game.scss
+++ b/src/stylesheets/components/game.scss
@@ -8,64 +8,29 @@
 }
 
 
-.line-1{
-    position: relative;
-    top: 50%;  
-    width: 90%;
-    margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
-    font-size: 180%;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-    -webkit-box-sizing:content-box;
-    box-sizing:content-box;
+.game-intro-container{
+  margin-top: 100px;
+}
+.test{
+  width: 50px;
+}
+.intro-text-line{
+  position: relative;
+  top: 100%;  
+  width: 90%;
+  margin: 0 auto;
+  border-right: 2px solid rgba(255,255,255,.75);
+  font-size: 2em;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-box-sizing:content-box;
+  box-sizing:content-box;
 }
 
 .animate-typewriter-cursor{
   width:0;
 }
 
-.line-2{
-    position: relative;
-    top: 50%;  
-    width: 90%;
-    margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
-    font-size: 1.5em;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-    -webkit-box-sizing:content-box;
-    box-sizing:content-box;
-}
-
-.animate-typewriter-cursor2{
-  width:0;
-  opacity: 0;
-}
-
-.line-3{
-    position: relative;
-    top: 50%;  
-    width: 90%;
-    margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
-    font-size: 2.5em;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-    -webkit-box-sizing:content-box;
-    box-sizing:content-box;
-}
-
-.animate-typewriter-cursor3{
-  width:0;
-  opacity: 0;
-}
