--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -17,8 +17,9 @@
 //   'base/typography',
 //   'base/helpers';
 
-// // 4. Layout-related sections
-// @import
+// 4. Layout-related sections
+@import
+  './layout/home-layout.scss';
 //   'layout/header',
 //   'layout/footer';
 
@@ -26,10 +27,12 @@
 @import
   './components/links.scss',
   './components/game.scss',
+  './components//buttons.scss',
   './components/home.scss';
 
 // 6. Page-specific styles
 @import
-  './pages/navbar.scss';
+  './pages/navbar.scss',
+  './pages/header.scss';
 
 // 7. Themes
