--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -19,7 +19,9 @@
 
 // 4. Layout-related sections
 @import
-  './layout/home-layout.scss';
+  './layout/home-layout.scss',
+  './layout/header-layout.scss',
+  './layout/game-layout.scss';
 //   'layout/header',
 //   'layout/footer';
 
