--- a/src/stylesheets/layout/header-layout.scss
+++ b/src/stylesheets/layout/header-layout.scss
@@ -9,6 +9,10 @@
 
 .score-container {
     grid-column-start: 1;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
 }
 
 .header-logo-container{
