adding about page

--- a/src/stylesheets/components/game.scss
+++ b/src/stylesheets/components/game.scss
@@ -32,13 +32,13 @@
   width:0;
 }
 
-.shooter-icon {
+.player-icon {
   width: 60px;
   height: 40px;
   padding: 3px;
 }
 
-.shooter-hidden {
+.player-hidden {
   display: none;
 }
 
