--- a/src/stylesheets/pages/navbar.scss
+++ b/src/stylesheets/pages/navbar.scss
@@ -1,13 +1,15 @@
 .navbar {
     &-wrapper{
-        background-color: black;
-        height: 25px;
-        
+        display: flex;
+        justify-content: space-between;
+        margin: 20px;
     }
     &-link{
-        color: red;
+        color: white;
+        text-decoration: none;
+        cursor: pointer;
         font-size: 20px;
-        margin: 10px;
+        font-family: $press-start-font-family;
     }
 }
 
