--- a/src/stylesheets/layout/standard-site-layout.scss
+++ b/src/stylesheets/layout/standard-site-layout.scss
@@ -8,3 +8,10 @@
     margin: 10px;
     width: 80%;
 }
+
+
+@media only screen and (max-width: 425px) {
+    .standard-site-container {
+        width: 95%;
+    }
+}
