--- a/src/stylesheets/pages/about.scss
+++ b/src/stylesheets/pages/about.scss
@@ -9,3 +9,10 @@
     color: #7DA8F7;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 768px) {
+    .about-text {
+        font-size: 18px;
+        margin-bottom: 20px;
+    }
+}
