--- a/src/stylesheets/pages/header.scss
+++ b/src/stylesheets/pages/header.scss
@@ -7,3 +7,11 @@
     height: 10vw;
     width: 50vh;
 }
+
+
+@media only screen and (max-width: 425px) {
+    .header-logo {
+        height: 10vw;
+        width: 25vh;
+    }
+}
