--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -19,11 +19,12 @@
 
 // 4. Layout-related sections
 @import
-  './layout/standard-site-layout.scss',
   './layout/about-layout.scss',
   './layout/home-layout.scss',
   './layout/header-layout.scss',
   './layout/game-layout.scss',
+  './layout/skills-layout.scss',
+  './layout/standard-site-layout.scss',
   './layout/work-layout.scss';
 //   'layout/header',
 //   'layout/footer';
