--- a/src/stylesheets/components/links.scss
+++ b/src/stylesheets/components/links.scss
@@ -9,9 +9,42 @@
     text-decoration: none;
     color: #7DA8F7;
     padding: 0 5px 5px 5px;
-    margin-bottom: 10px;
+    margin-bottom: 11px;
 }
 
 .work-card-more-details:hover {
     border-bottom: 1px solid #7DA8F7;
+    margin-bottom: 10px;
+}
+
+
+.work-details-link-available {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-family: $press-start-font-family;
+    font-size: 16px;
+    cursor: pointer;
+    text-decoration: none;
+    color: #7DA8F7;
+    padding: 0 5px 5px 5px;
+    margin-bottom: 11px;
+}
+
+.work-details-link-available:hover {
+    border-bottom: 1px solid #7DA8F7;
+    margin-bottom: 10px;
+}
+
+.work-details-link-not-available {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-family: $press-start-font-family;
+    font-size: 16px;
+    cursor: default;
+    text-decoration: none;
+    color: #7DA8F7;
+    padding: 0 5px 5px 5px;
+    margin-bottom: 11px;
 }
