--- a/src/stylesheets/components/home.scss
+++ b/src/stylesheets/components/home.scss
@@ -9,10 +9,16 @@
     position: absolute;
     left: 50%;
     margin-left: -25vw;
-    // margin-top: 50px;
     display: block;
     width: 100%;
     z-index: 10;
+}
+
+@media only screen and (max-width: 425px) {
+    .home-canvas {
+        left: 10%;
+        margin-left: -5vw;
+    }
 }
 
 
