--- a/src/stylesheets/pages/work-details.scss
+++ b/src/stylesheets/pages/work-details.scss
@@ -40,3 +40,39 @@
     font-size: 18px;
     margin: 0;
 }
+
+@media only screen and (min-width: 2560px) {
+    .work-details-text {
+        font-size: 24px;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .work-details-text {
+        font-size: 20px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .work-details-title {
+        font-size: 20px;
+    }
+    .work-details-text-header {
+        font-size: 14px;
+    }
+    .work-details-text {
+        font-size: 16px;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    .work-details-title {
+        font-size: 18px;
+    }
+    .work-details-text-header {
+        font-size: 14px;
+    }
+    .work-details-text {
+        padding: 20px 0 0 0;
+    }
+}
