--- a/src/stylesheets/components/images.scss
+++ b/src/stylesheets/components/images.scss
@@ -46,9 +46,9 @@
 }
 
 
-@media only screen and (max-width: 2560px) {
+@media only screen and (min-width: 2560px) {
     .carousel-image {
-        height: 800px;
+        height: 500px;
     }
 }
 
@@ -65,7 +65,6 @@
         width: auto;
         height: 70px;
     }
-    
 }
 
 @media only screen and (min-width: 1200px) {
@@ -81,9 +80,16 @@
         width: auto;
         height: 70px;
     }
+    
 }
 
-@media only screen and (min-width: 768px) {
+// @media only screen and (min-width: 1024px) {
+//     .carousel-image {
+//         height: 500px;
+//     }
+// }
+
+@media only screen and (max-width: 768px) {
     .header-logo {
         height: 12vw;
         width: 30vh;
