fixing mobile styles

--- a/src/stylesheets/components/images.scss
+++ b/src/stylesheets/components/images.scss
@@ -124,13 +124,8 @@
 
 
 @media only screen and (max-width: 425px) {
-    .skill-badge-image-long {
-        height: 30px;
-        margin: 3px 3px 3px 3px;
-    }
-    .skill-badge-image {
-        margin: 10px 0 10px 0;
-        height: 30px;
+    .header-logo {
+        height: 20vw;
     }
     .carousel-image {
         width: 400px;
