--- a/src/stylesheets/layout/skills-layout.scss
+++ b/src/stylesheets/layout/skills-layout.scss
@@ -8,7 +8,7 @@
 @media only screen and (max-width: 425px) {
     .skills-wrapper{
         display : grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
         justify-items: center;
     }
 }
