--- a/src/stylesheets/pages/navbar.scss
+++ b/src/stylesheets/pages/navbar.scss
@@ -6,7 +6,7 @@
         background-color: black;
         display: flex;
         justify-content: space-between;
-        padding: 20px;
+        padding: 0 20px 10px 0;
     }
     &-link{
         color: white;
