--- a/src/stylesheets/pages/navbar.scss
+++ b/src/stylesheets/pages/navbar.scss
@@ -34,9 +34,10 @@
     .navbar {
         &-wrapper{
             margin-top: 5px;
+            padding: 15px 0 20px 0;
         }
         &-link{
-            font-size: 10px;
+            font-size: 14px;
         }
     }
 }
