adding more portfolio projects

--- a/src/stylesheets/components/links.scss
+++ b/src/stylesheets/components/links.scss
@@ -49,6 +49,14 @@
     margin-bottom: 11px;
 }
 
+.additional-resources-link {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #7DA8F7;
+    cursor: pointer;
+    padding: 0 20px 0 20px;
+    text-decoration: none;
+}
+
 
 @media only screen and (min-width: 768px) {
 
