--- a/src/stylesheets/layout/work-details-layout.scss
+++ b/src/stylesheets/layout/work-details-layout.scss
@@ -6,7 +6,6 @@
 .work-details-link-container {
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: 20px;
 }
 
 .carousel-container-layout {
@@ -26,6 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
 }
 
 .work-details-text-container {
@@ -33,6 +33,28 @@
     padding: 25px 0 100px 0;
     display: grid;
     grid-template-columns: 1fr 2fr;
+}
+
+.additional-assets-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: space-evenly;
+}
+
+.additiona-assets-header {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0 0 5px 0;
+    font-size: 1em;
+}
+
+.additional-assets-link-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
 }
 
 @media only screen and (max-width: 2560px) {
