--- a/src/stylesheets/components/links.scss
+++ b/src/stylesheets/components/links.scss
@@ -57,6 +57,10 @@
     text-decoration: none;
 }
 
+.additional-resources-link:hover {
+    color: #B4D1FF;
+}
+
 
 @media only screen and (min-width: 768px) {
 
