--- a/src/stylesheets/pages/navbar.scss
+++ b/src/stylesheets/pages/navbar.scss
@@ -4,9 +4,10 @@
         top: 0;
         z-index: 100;
         background-color: black;
-        display: flex;
-        justify-content: space-between;
-        padding: 0 20px 10px 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        justify-items: center;
+        padding: 20px 20px 10px 0;
     }
     &-link{
         color: white;
