--- a/src/stylesheets/pages/navbar.scss
+++ b/src/stylesheets/pages/navbar.scss
@@ -15,6 +15,7 @@
         cursor: pointer;
         font-size: 20px;
         font-family: $press-start-font-family;
+        margin-left: 1em;
     }
 }
 
