--- a/src/stylesheets/components/buttons.scss
+++ b/src/stylesheets/components/buttons.scss
@@ -8,7 +8,7 @@
     padding: 20px;
     margin: 20px;
     width: 40%;
-    opacity: .5;
+    opacity: 0;
     font-family: $press-start-font-family, cursive;
     text-decoration: none; 
     color: white;
