--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -20,6 +20,7 @@
   './layout/about-layout.scss',
   './layout/home-layout.scss',
   './layout/header-layout.scss',
+  './layout/footer-layout.scss',
   './layout/game-layout.scss',
   './layout/skills-layout.scss',
   './layout/standard-site-layout.scss',
