--- a/src/stylesheets/layout/footer-layout.scss
+++ b/src/stylesheets/layout/footer-layout.scss
@@ -14,3 +14,15 @@
 .heart{
     font-size: 24px;
 }
+
+@media only screen and (max-width: 768px) {
+    .footer-text{
+        font-size: 10px;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    .footer-wrapper{
+        flex-direction: column;
+    }
+}
