improving work tile title legibility

--- a/src/stylesheets/pages/work.scss
+++ b/src/stylesheets/pages/work.scss
@@ -23,6 +23,7 @@
     font-family: $press-start-font-family;
     font-size: 20px;
     text-align: center;
+    line-height: 1.6;
 }
 
 .work-card-description {
