--- a/src/stylesheets/components/buttons.scss
+++ b/src/stylesheets/components/buttons.scss
@@ -1,76 +1,26 @@
-.eightbit-btn {
-    background: $button-background;
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
+.start-btn{
+    font-family: $press-start-font-family;
+    background-color: $alt-button-background;
     text-align: center;
+	display: inline-block;
+    width: 300px;
+    height: 50px;
+	margin:5px;
+    font-weight: bold;
     font-size: 30px;
-    padding: 20px;
-    margin: 20px;
-    width: 40%;
-    opacity: 0;
-    font-family: $press-start-font-family, cursive;
-    text-decoration: none; 
+    padding: 10px 0 10px 10px ;
+    text-shadow: -3px -3px black, 1px 1px $alt-shadow-color;
     color: white;
-    box-shadow: inset (-$shadow-width) (-$shadow-width) 0px 0px $shadow-color;
-    &:hover,
-    &:focus {
-        background: $sec-button-background;
-        box-shadow: inset (-$shadow-width*1.5) (-$shadow-width*1.5) 0px 0px $shadow-color;
-    }
-    &:active {
-        box-shadow: inset $shadow-width $shadow-width 0px 0px $shadow-color;
-    }
-    &:before,
-    &:after {
-    content: '';
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        box-sizing: content-box;
-    }
-    &:before {
-        top: -$outline-width;
-        left: 0;
-        border-top: $outline-width white solid;
-        border-bottom: $outline-width white solid;
-    }
-    &:after {
-        left: -$outline-width;
-        top: 0;
-        border-left: $outline-width white solid;
-        border-right: $outline-width white solid;
-    }
-    &--reset {
-        background: $reset-button-background;
-        box-shadow: inset (-$shadow-width) (-$shadow-width) 0px 0px $reset-shadow-color;
-        &:hover,
-        &:focus {
-            background: $reset-sec-button-background;
-            box-shadow: inset (-$shadow-width*1.5) (-$shadow-width*1.5) 0px 0px $reset-shadow-color;
-        }
-        &:active {
-            box-shadow: inset $shadow-width $shadow-width 0px 0px $reset-shadow-color;
-        }
-    }
-    &--proceed {
-        background: $alt-button-background;
-        box-shadow: inset (-$shadow-width) (-$shadow-width) 0px 0px $alt-shadow-color;
-        &:hover,
-        &:focus {
-            background: $alt-sec-button-background;
-            box-shadow: inset (-$shadow-width*1.5) (-$shadow-width*1.5) 0px 0px $alt-shadow-color;
-        }
-        &:active {
-            box-shadow: inset $shadow-width $shadow-width 0px 0px $alt-shadow-color;
-        }
-    }
+    letter-spacing: 5px;
+    -webkit-border-radius: 7px;
+	-moz-border-radius: 7px;
+	-o-border-radius: 7px;
+	border-radius: 7px;
+    box-shadow: 0 .2em $alt-shadow-color; 
+    cursor: pointer;
 }
 
-
-@media only screen and (max-width: 425px) {
-    .eightbit-btn {
-        font-size: 16px;
-        width: 70%;
-    }
+.start-btn:hover{
+    background-color: $button-background;
+    box-shadow: 0 .2em $shadow-color;
 }
