--- a/src/stylesheets/pages/about.scss
+++ b/src/stylesheets/pages/about.scss
@@ -9,6 +9,9 @@
     color: #7DA8F7;
     cursor: pointer;
 }
+.contact-icon-spacer {
+    width: 40px;
+}
 
 @media only screen and (max-width: 768px) {
     .about-text {
