--- a/src/stylesheets/layout/skills-layout.scss
+++ b/src/stylesheets/layout/skills-layout.scss
@@ -2,7 +2,8 @@
     display : grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     justify-items: center;
-    margin-bottom: 75px;
+    margin-bottom: 200px;
+    padding-top: 150px;
 }
 
 @media only screen and (max-width: 425px) {
